tests/ui/compile-fail/init/field_value_wrong_type.stderr
error[E0308]: mismatched types
 --> tests/ui/compile-fail/init/field_value_wrong_type.rs:8:13
  |
8 |     let _ = init!(Foo { a: () });
  |             ^^^^^^^^^^^^^^^^^^^^
  |             |
  |             expected `usize`, found `()`
  |             arguments to this function are incorrect
  |
note: function defined here
 --> $RUST/core/src/ptr/mod.rs
  = note: this error originates in the macro `$crate::__init_internal` which comes from the expansion of the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)
